--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.3",
   "description": "A pivot table plugin basted on pivot-grid",
   "license": "MIT",
-  "main": "/dist/pivot-grid-plus.es.js",
+  "main": "./dist/visual-grid.umd.js",
+  "module": "./dist/visual-grid.es.js",
+  "types": "./dist/js/index.d.ts",
   "scripts": {
     "serve": "vite --open --port 8080",
-    "build": "vite build",
+    "build": "vite build && tsc -p ./tsconfig.dist.json -emitDeclarationOnly && tsc-alias -p ./tsconfig.dist.json",
     "publish-remote": "npm run build && npm publish"
   },
   "keywords": [],
@@ -16,11 +18,13 @@
     "prettier": "^2.3.2",
     "sass": "^1.38.0",
     "vite": "^2.5.0",
+    "tsc-alias": "^1.3.9",
+    "typescript": "^4.3.5",
     "vite-plugin-mock": "^2.9.4"
   },
   "dependencies": {
-    "lodash-es": "^4.17.15",
     "devextreme": "=21.1.5",
+    "lodash-es": "^4.17.15",
     "throttle-debounce": "^3.0.1"
   }
 }
