--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
+    "declaration": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
     "strictFunctionTypes": false,
     "jsx": "preserve",
     "baseUrl": ".",
-    "allowJs": true,
+    "allowJs": false,
     "sourceMap": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
@@ -17,10 +18,11 @@
     "noUnusedParameters": true,
     "experimentalDecorators": true,
     "lib": ["dom", "esnext"],
-    "types": ["vite/client", "jest"],
+    "types": ["vite/client"],
     "typeRoots": ["./node_modules/@types/", "./types"],
     "noImplicitAny": false,
     "skipLibCheck": true,
+    "outDir": "dist",
     "paths": {
       "/@/*": ["src/*"],
       "/@P/*": ["src/@packages*"],
